ingress/ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth
                port:
                  number: 80
          - path: /product(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product
                port:
                  number: 80
          - path: /order(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order
                port:
                  number: 80
          - path: /cart(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart
                port:
                  number: 80
