ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
spec:
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 80
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 80
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 80
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart
            port:
              number: 80
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 80
